[package]
name = "time_series"
version = "0.1.0"
authors = ["Eric Findlay <e.findlay@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peroxide = "0.30.6"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
time = "0.3.5"


