[package]
name = "time_series"
version = "0.1.0"
authors = ["Eric Findlay <e.findlay@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
csv = "1.1.6"
indoc = "1.0.5"
peroxide = "0.30.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"


