[package]
name = "time_series"
version = "0.1.1"
authors = ["Eric Findlay <e.findlay@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1.6"
indoc = "1.0.5"
thiserror = "1.0.31"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"


